--- a/index.css
+++ b/index.css
@@ -218,7 +218,6 @@ a {
     flex-shrink: 4;
 }
 
-
 .banner {
     display: flex;
     justify-content: space-between;
@@ -229,7 +228,6 @@ a {
     border-radius: 10px;
     color: whitesmoke;
 }
-
 
 .banner h3 {
     margin: 0;
@@ -248,6 +246,8 @@ a {
     color: white;
 }
 
+/* Footer Start */
+
 .footer {
     display: flex;
     flex-direction: row;
@@ -260,3 +260,5 @@ a {
     align-items: center;
     text-align: center;
 }
+
+/* Footer End */
